Fix sonar